fix(chatgpt): dark mode overrides

--- a/styles/chatgpt/catppuccin.user.css
+++ b/styles/chatgpt/catppuccin.user.css
@@ -832,7 +832,8 @@
     }
 
     /* Dark mode overrides */
-    [class*="dark:"] when not (@lookup = latte) {
+    /* stylelint-disable-next-line no-duplicate-selectors */
+    & when not (@lookup = latte) {
       .dark\:bg-black {
         background-color: @black;
       }
